--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Eyup.io Landing Page</title>
+<title>EyUp.io</title>
 <style>
   body, html {
     height: 100%;
@@ -14,7 +14,7 @@
 
   .bg-image {
     /* The image used */
-    background-image: url('background-image.jpg');
+    background-image: url('background-image.png');
 
     /* Full height */
     height: 100%;
