--- a/app/static/index.html
+++ b/app/static/index.html
@@ -62,11 +62,25 @@
 <div class="bg-image"></div>
 
 <div class="bg-text">
-  <h1>Welcome to Eyup.io</h1>
+  <h1>Welcome to EYUP.IO</h1>
   <p>Your gateway to the digital universe.</p>
 </div>
 
-<div id="scroll-text">eyup.io</div>
+<div id="scroll-text">
+  ──────────────────────────────────────────────────────────────────────────────────────────────────
+  ─██████████████─████████──████████─██████──██████─██████████████────────██████████─██████████████─
+  ─██░░░░░░░░░░██─██░░░░██──██░░░░██─██░░██──██░░██─██░░░░░░░░░░██────────██░░░░░░██─██░░░░░░░░░░██─
+  ─██░░██████████─████░░██──██░░████─██░░██──██░░██─██░░██████░░██────────████░░████─██░░██████░░██─
+  ─██░░██───────────██░░░░██░░░░██───██░░██──██░░██─██░░██──██░░██──────────██░░██───██░░██──██░░██─
+  ─██░░██████████───████░░░░░░████───██░░██──██░░██─██░░██████░░██──────────██░░██───██░░██──██░░██─
+  ─██░░░░░░░░░░██─────████░░████─────██░░██──██░░██─██░░░░░░░░░░██──────────██░░██───██░░██──██░░██─
+  ─██░░██████████───────██░░██───────██░░██──██░░██─██░░██████████──────────██░░██───██░░██──██░░██─
+  ─██░░██───────────────██░░██───────██░░██──██░░██─██░░██──────────────────██░░██───██░░██──██░░██─
+  ─██░░██████████───────██░░██───────██░░██████░░██─██░░██─────────██████─████░░████─██░░██████░░██─
+  ─██░░░░░░░░░░██───────██░░██───────██░░░░░░░░░░██─██░░██─────────██░░██─██░░░░░░██─██░░░░░░░░░░██─
+  ─██████████████───────██████───────██████████████─██████─────────██████─██████████─██████████████─
+  ──────────────────────────────────────────────────────────────────────────────────────────────────
+  </div>
 
 <script>
 // Using JavaScript to make the text "eyup.io" scroll in the background
