--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EyUp.io</title>
 <style>
+
 body, html {
   height: 100%;
   margin: 0;
@@ -38,7 +39,7 @@ body, html {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  width: 60%; /* Default width for large screens */
+  width: 80%;
   padding: 20px;
   text-align: center;
   font-size: 1.5vw; /* Responsive font size */
@@ -59,35 +60,27 @@ body, html {
 @media screen and (max-width: 768px) {
   .bg-text {
     font-size: 3vw; /* Increased font size for tablets */
-    width: 80%; /* Increased width for tablets */
+    width: 90%; /* Adjusted width for tablets */
     padding: 15px;
   }
 
-  #scroll-text {
-    font-size: 3vw; /* Adjusted font size for tablets */
-  }
-
-  .bg-image {
-    background-size: auto 100%; /* Adjust background size for better mobile view */
+  .bg-text p:nth-child(1) {
+    font-size: 2.5vw; /* Smaller font size for ASCII art on tablets */
   }
 }
 
 @media screen and (max-width: 480px) {
   .bg-text {
     font-size: 5vw; /* Further increased font size for mobile phones */
-    width: 90%; /* Increased width for mobile phones */
+    width: 95%; /* Adjusted width for mobile phones */
     padding: 10px;
   }
 
-  #scroll-text {
-    font-size: 4vw; /* Adjusted font size for mobile phones */
-  }
-
-  .bg-image {
-    /* Optional: Use a different background image for small devices */
-    background-image: url('background-image-mobile.png');
+  .bg-text p:nth-child(1) {
+    font-size: 4vw; /* Smaller font size for ASCII art on mobile phones */
   }
 }
+
 
 </style>
 </head>
