--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,83 +5,56 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EyUp.io</title>
 <style>
+  body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    overflow-x: hidden;
+  }
 
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, sans-serif;
-  overflow-x: hidden;
-}
+  .bg-image {
+    /* The image used */
+    background-image: url('background-image.png');
 
-.bg-image {
-  /* The image used */
-  background-image: url('background-image.png');
+    /* Full height */
+    height: 100%;
 
-  /* Full height */
-  height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    /* Fixed background (creates parallel effect on scroll) */
+    background-attachment: fixed;
+  }
 
-  /* Fixed background (creates parallax effect on scroll) */
-  background-attachment: fixed;
-}
-
-.bg-text {
-  background-color: rgba(0, 0, 0, 0.5); /* Black background with transparency */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
-  font-size: 1.5vw; /* Responsive font size */
-}
-
-#scroll-text {
-  position: fixed;
-  top: 0;
-  right: 100%;
-  width: auto;
-  white-space: nowrap;
-  font-size: 2vw; /* Responsive font size */
-  font-weight: bold;
-  color: #fff;
-}
-
-/* Responsive Design Adjustments */
-@media screen and (max-width: 768px) {
+  /* Position text in the center of the page/image */
   .bg-text {
-    font-size: 3vw; /* Increased font size for tablets */
-    width: 90%; /* Adjusted width for tablets */
-    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.5); /* Black background with transparency */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
   }
 
-  .bg-text p:nth-child(1) {
-    font-size: 2.5vw; /* Smaller font size for ASCII art on tablets */
+  /* For the scrolling text effect */
+  #scroll-text {
+    position: fixed;
+    top: 0;
+    right: 100%;
+    width: auto;
+    white-space: nowrap;
+    font-size: 2em;
+    font-weight: bold;
+    color: #fff;
   }
-}
-
-@media screen and (max-width: 480px) {
-  .bg-text {
-    font-size: 5vw; /* Further increased font size for mobile phones */
-    width: 95%; /* Adjusted width for mobile phones */
-    padding: 10px;
-  }
-
-  .bg-text p:nth-child(1) {
-    font-size: 4vw; /* Smaller font size for ASCII art on mobile phones */
-  }
-}
-
-
 </style>
 </head>
 <body>
